# agency

./: Cargo.toml  LICENSE  README.md  build.zig
src/: agent.rs  cli.rs  lib.rs  main.rs  main.zig
src/agent/: files.rs  identities.rs  mod.rs  running_agents.rs
tests/: options.rs  run_binary.rs
tests/data/: id_ed25519_key  id_ed25519_key.pub
